--- a/styles/style.css
+++ b/styles/style.css
@@ -1,313 +1,437 @@
-.page {
-  min-width: 1100px;
-  max-width: 1600px;
-  margin: 0 auto;
-  font-family: 'Helvetica Neue', Arial, sans-serif;
+.page
+{
+    min-width: 1100px;
+    max-width: 1600px;
+    margin: 0 auto;
+
+    font-family: 'Helvetica Neue', Arial, sans-serif;
 }
 
-.header {
-  height: 100vh;
-  min-height: 600px;
-  max-height: 756px;
-  background-color:  #f2f2f2;
-  display: flex;
+.header
+{
+    position: relative;
+
+    display: flex;
+
+    height: 100vh;
+    min-height: 600px;
+    max-height: 756px;
+
+    background-color: #f2f2f2;
 }
 
-.header_left {
-  left: 64px;
+.logo
+{
+    width: 183px;
+    height: 32px;
 }
 
-.logo {
-  width: 183px;
-  height: 32px;
+.logo_place_header
+{
+    position: absolute;
+    z-index: 3;
+    top: 30px;
+    left: 64px;
+
+    background-image: url('../images/logo_place_header.svg');
+    background-size: 183px 32px;
 }
 
-.logo_place_header {
-  background-image: url('../images/logo_place_header.svg');
-  position: absolute;
-  top: 30px;
-  z-index: 2;
+.header__title
+{
+    position: relative;
+    z-index: 2;
+    left: 64px;
+
+    align-self: center;
+
+    width: 730px;
+    margin: 0;
+    padding: 0;
+
+    font-size: 102px;
+    font-weight: bold;
+    line-height: 96px;
 }
 
-.header__title {
-  padding: 0;
+.header__subtitle
+{
+    position: absolute;
+    z-index: 3;
+    bottom: 30px;
+    left: 64px;
+
+    width: 388px;
+    margin: 0;
+    padding: 0;
+
+    font-size: 18px;
+    font-weight: normal;
+    line-height: 25px;
+}
+
+.header__link
+{
+    color: #2f80ed;
+    text-decoration: none;
+}
+
+.header__main-illustration
+{
+    position: absolute;
+    z-index: 1;
+    right: 0;
+    bottom: 0;
+
+    width: 765px;
+    height: 608px;
+}
+
+.header__square-pic
+{
+    position: absolute;
+    top: 64px;
+    right: 0;
+
+    width: 568px;
+    height: 568px;
+
+    background-color: #2f80ed;
+}
+
+
+.two-columns
+{
+    display: flex;
+    justify-content: space-between;
+
+    width: 80%;
+    margin: 100px auto 0;
+}
+
+.two-columns__brief
+{
+    width: 175px;
+    margin: 0;
+    padding: 0;
+
+    text-decoration: none;
+
+    color: #2f80ed;
+
+    font-size: 18px;
+    font-weight: normal;
+    line-height: 1.2;
+}
+
+.two-columns__main-text
+{
+    width: 80%;
+    min-width: 784px;
+}
+
+.two-columns__paragraph
+{
+    margin: 0 0 30px;
+    padding: 0;
+
+    font-size: 24px;
+    line-height: 34px;
+    font-weight: normal;
+}
+
+.two-columns__paragraph:last-of-type
+{
+    margin: 0;
+}
+
+.two-columns__span-accent
+{
+    font-weight: bold;
+}
+
+.digits
+{
+    margin-top: 100px;
+}
+
+.section-title
+{
+    width: 60%;
+    margin: 0 auto 20px;
+
+    text-align: center;
+
+    font-size: 60px;
+    font-weight: bold;
+    line-height: 69px;
+}
+
+.section-subtitle
+{
+    width: 60%;
+    margin: 0 auto 0;
+    padding: 0;
+
+    text-align: center;
+
+    font-size: 24px;
+    font-weight: normal;
+    line-height: 34px;
+}
+
+.table
+{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+
+    width: 1100px;
+    margin: 0 auto 100px;
+    padding: 0;
+}
+
+.table__cell
+{
+    width: 250px;
+    margin: 60px 0 0 0;
+
+    list-style-type: none;
+}
+
+.table__heading
+{
+    margin: 0;
+    padding: 0;
+
+    font-size: 24px;
+    font-weight: bold;
+    line-height: 1.15;
+}
+
+.table__text
+{
+    margin: 20px 0 0 0;
+    padding: 0;
+
+    font-size: 18px;
+    font-weight: normal;
+    line-height: 1.2;
+}
+
+.feynman
+{
+    position: relative;
+
+    height: 790px;
+
+    text-align: center;
+
+    background-color: #f2f2f2;
+}
+
+.feynman__title
+{
+    position: relative;
+    z-index: 2;
+
+    width: 648px;
+    margin: 0 auto;
+
+    font-size: 120px;
+    font-weight: bold;
+    line-height: 1.15;
+}
+
+.feynman__subtitle
+{
+    position: relative;
+    z-index: 2;
+
+    margin: 70px 0 0 0;
+    padding: 0;
+
+    font-size: 36px;
+    font-weight: normal;
+    line-height: 51px;
+}
+
+.feynman__link
+{
+    position: absolute;
+    top: 50%;
+    right: 48px;
+
+    text-decoration: none;
+
+    color: black;
+
+    font-size: 36px;
+    font-weight: normal;
+    line-height: 51px;
+}
+
+.feynman__main-illustration
+{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+
+    width: 867px;
+    height: 637px;
+
+    background-image: url(../images/feynman.png);
+    background-size: 867px 637px;
+}
+
+.kaufman
+{
+    position: relative;
+    z-index: -2;
+
+    overflow: hidden;
+
+    padding: 90px 0;
+
+    background-color: #1f1f1f;
+}
+
+.section-title_theme_dark
+{
+    color: white;
+}
+
+.section-subtitle_theme_dark
+{
+    color: white;
+}
+
+.table__cell_theme_dark
+{
+    width: 200px;
+    margin-top: 80px;
+    margin-right: 0;
+
+    color: white;
+}
+
+.kaufman__triangle
+{
+    position: absolute;
+    z-index: -1;
+    top: 0;
+    right: -210px;
+
+    width: 877px;
+    height: 877px;
+
+    background-image: url('../images/kaufman-triangle.svg');
+    background-size: 877px;
+}
+
+.footer
+{
+    display: flex;
+
+    min-height: 350px;
+
+    background-color: #1f1f1f;
+}
+
+.footer__columns
+{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+
+    width: 90%;
+    margin: 60px auto 40px;
+    padding: 0;
+
+    text-decoration: none;
+
+    color: white;
+}
+
+.footer__column {
   margin: 0;
-  width: 730px;
-  line-height: 96px;
-  font-size: 102px;
-  font-weight: bold;
-  position: relative;
-  align-self: center;
-  z-index: 1;
-}
-
-.header__subtitle {
   padding: 0;
-  margin: 0;
-  width: 388px;
-  line-height: 25px;
-  font-size: 18px;
-  font-weight: normal;
-  position: absolute;
-  bottom: 30px;
-  z-index: 2;
 }
 
-.header__link {
-  color: #2f80ed;
+.footer__column_content_copyright
+{
+    display: flex;
+    flex-basis: 711px;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
-.header__main-illustration {
-  width: 765px;
-  height: 608px;
-  position: absolute;
-  right: 0;
-  bottom: 0;
-  z-index: 1;
+.logo_place_footer
+{
+    height: 35px;
+
+    background-image: url('../images/logo_place_footer.svg');
+    background-size: 183px 35px;
 }
 
-.header__square-pic {
-  height: 568px;
-  width: 568px;
-  background-color: #2f80ed;
-  position: absolute;
-  top: 64px;
-  right: 0;
+.footer__author
+{
+    margin: 18px 0 18px;
+    padding: 0;
+
+    font-size: 18px;
+    font-weight: normal;
+    line-height: 25px;
 }
 
-
-.two-columns {
-  width: 80%;
-  margin: 100px auto 0;
-  display: flex;
-  justify-content: space-between;
-
+.footer__column_content_info
+{
+    display: flex;
+    flex-direction: column;
 }
 
-.two-columns__brief {
-  width: 175px;
-  color: #2f80ed;
-  text-decoration: none;
-  font-size: 18px;
-  line-height: 1.2;
-  padding: 0;
-  margin: 0;
+.footer__column_content_social
+{
+    display: flex;
+    flex-direction: column;
 }
 
-.two-columns__main-text {
-  width: 80%;
-  min-width: 784px;
+.footer__column-heading
+{
+    margin: 0;
+    padding: 0;
+
+    font-size: 18px;
+    font-weight: bold;
+    line-height: 30px;
 }
 
-.two-columns__paragraph {
-  padding: 0;
-  margin: 0 0 30px;
-  font-size: 24px;
-  line-height: 34px;
+.footer__column-links
+{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+    margin: 20px 0 16px;
+    padding: 0;
+
+    list-style-type: none;
+
+    font-size: 18px;
+    font-weight: normal;
+    line-height: 30px;
 }
 
-.two-columns__paragraph:last-of-type {
-  margin: 0;
+.footer__link
+{
+    text-decoration: none;
+
+    color: white;
 }
 
-.two-columns__span-accent {
-  font-weight: bold;
-}
-
-.digits {
-  margin-top: 100px;
-}
-
-.section-title {
-  text-align: center;
-  margin: 0 auto 20px;
-  width: 60%;
-  line-height: 69px;
-  font-size: 60px;
-  font-weight: bold;
-}
-
-.section-subtitle {
-  text-align: center;
-  margin: 0 auto 0;
-  width: 60%;
-  line-height: 34px;
-  font-size: 24px;
-  font-weight: normal;
-}
-
-.table {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  width: 1100px;
-  margin: 0 auto 100px;
-}
-
-.table__cell {
-  width: 250px;
-  margin-top: 60px;
-}
-
-.table__heading {
-  line-height: 1.15;
-  font-size: 24px;
-  font-weight: bold;
-}
-
-.table__text {
-  margin-top: 20px;
-  line-height: 1.2;
-  font-size: 18px;
-  font-weight: normal;
-}
-
-.feynman {
-  position: relative;
-  height: 790px;
-  text-align: center;
-  background-color:  #f2f2f2;
-}
-
-.feynman__title {
-  width: 648px;
-  line-height: 1.15;
-  font-size: 120px;
-  font-weight: bold;
-  margin: 0 auto;
-  position: relative;
-  z-index: 2;
-}
-
-.feynman__subtitle {
-  line-height: 51px;
-  font-size: 36px;
-  font-weight: normal;
-  position: relative;
-  z-index: 2;
-}
-
-.feynman__link {
-  line-height: 51px;
-  font-size: 36px;
-  font-weight: normal;
-  color: black;
-  text-decoration: none;
-  position: absolute;
-  top: 50%;
-  right: 48px;
-}
-
-.feynman__main-illustration {
-  width: 867px;
-  height: 637px;
-  position: absolute;
-  left: 0;
-  bottom: 0;
-}
-
-.kaufman {
-  padding: 90px 0;
-  background-color: #1f1f1f;
-  position: relative;
-  z-index: -2;
-  overflow: hidden;
-}
-
-.section-title_theme_dark {
-  color: white;
-}
-
-.section-subtitle_theme_dark {
-  color: white;
-}
-
-.table__cell_theme_dark {
-  width: 200px;
-  color: white;
-  margin-right: 0;
-  margin-top: 80px;
-}
-
-.kaufman__triangle {
-  width: 877px;
-  height: 877px;
-  background-image: url('../images/kaufman-triangle.svg');
-  position: absolute;
-  top: 0;
-  right: -210px;
-  z-index: -1;
-
-}
-
-.footer {
-  background-color: #1f1f1f;
-  min-height: 350px;
-  display: flex;
-}
-
-.footer__columns {
-  margin: 60px auto 40px;
-  display: flex;
-  flex-direction: row;
-  width: 90%;
-  justify-content: space-between;
-  color: white;
-  text-decoration: none;
-}
-
-.footer__column_content_copyright {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  flex-basis: 711px;
-}
-
-.logo_place_footer {
-  height: 35px;
-  background-image: url('../images/logo_place_footer.svg');
-}
-
-.footer__author {
-  margin: 18px 0 18px;
-  line-height: 25px;
-  font-size: 18px;
-  font-weight: normal;
-}
-
-.footer__column_content_info {
-  display: flex;
-  flex-direction: column;
-}
-
-.footer__column_content_social {
-  display: flex;
-  flex-direction: column;
-}
-
-.footer__column-heading {
-  line-height: 30px;
-  font-size: 18px;
-  font-weight: bold;
-}
-
-.footer__column-links {
-  line-height: 30px;
-  font-size: 18px;
-  font-weight: normal;
-  margin: 20px 0 16px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
-
-.footer__link {
-  text-decoration: none;
-  color: white;
-}
-
-.footer__social-icon {
-  width: 16px;
-  height: 16px;
-  margin-left: 10px;
+.footer__social-icon
+{
+    width: 16px;
+    height: 16px;
+    margin-left: 10px;
 }
