--- a/styles/style.css
+++ b/styles/style.css
@@ -1,437 +1,395 @@
-.page
-{
-    min-width: 1100px;
-    max-width: 1600px;
-    margin: 0 auto;
+.page {
+  min-width: 1100px;
+  max-width: 1600px;
+  margin: 0 auto;
 
-    font-family: 'Helvetica Neue', Arial, sans-serif;
+  font-family: 'Helvetica Neue', Arial, sans-serif;
 }
 
-.header
-{
-    position: relative;
+.header {
+  position: relative;
 
-    display: flex;
+  display: flex;
 
-    height: 100vh;
-    min-height: 600px;
-    max-height: 756px;
+  height: 100vh;
+  min-height: 600px;
+  max-height: 756px;
 
-    background-color: #f2f2f2;
+  background-color: #f2f2f2;
 }
 
-.logo
-{
-    width: 183px;
-    height: 32px;
+.logo {
+  width: 183px;
+  height: 32px;
 }
 
-.logo_place_header
-{
-    position: absolute;
-    z-index: 3;
-    top: 30px;
-    left: 64px;
+.logo_place_header {
+  position: absolute;
+  z-index: 3;
+  top: 30px;
+  left: 64px;
 
-    background-image: url('../images/logo_place_header.svg');
-    background-size: 183px 32px;
+  background-image: url('../images/logo_place_header.svg');
+  background-size: 183px 32px;
 }
 
-.header__title
-{
-    position: relative;
-    z-index: 2;
-    left: 64px;
+.header__title {
+  position: relative;
+  z-index: 2;
+  left: 64px;
 
-    align-self: center;
+  align-self: center;
 
-    width: 730px;
-    margin: 0;
-    padding: 0;
-
-    font-size: 102px;
-    font-weight: bold;
-    line-height: 96px;
-}
-
-.header__subtitle
-{
-    position: absolute;
-    z-index: 3;
-    bottom: 30px;
-    left: 64px;
-
-    width: 388px;
-    margin: 0;
-    padding: 0;
-
-    font-size: 18px;
-    font-weight: normal;
-    line-height: 25px;
-}
-
-.header__link
-{
-    color: #2f80ed;
-    text-decoration: none;
-}
-
-.header__main-illustration
-{
-    position: absolute;
-    z-index: 1;
-    right: 0;
-    bottom: 0;
-
-    width: 765px;
-    height: 608px;
-}
-
-.header__square-pic
-{
-    position: absolute;
-    top: 64px;
-    right: 0;
-
-    width: 568px;
-    height: 568px;
-
-    background-color: #2f80ed;
-}
-
-
-.two-columns
-{
-    display: flex;
-    justify-content: space-between;
-
-    width: 80%;
-    margin: 100px auto 0;
-}
-
-.two-columns__brief
-{
-    width: 175px;
-    margin: 0;
-    padding: 0;
-
-    text-decoration: none;
-
-    color: #2f80ed;
-
-    font-size: 18px;
-    font-weight: normal;
-    line-height: 1.2;
-}
-
-.two-columns__main-text
-{
-    width: 80%;
-    min-width: 784px;
-}
-
-.two-columns__paragraph
-{
-    margin: 0 0 30px;
-    padding: 0;
-
-    font-size: 24px;
-    line-height: 34px;
-    font-weight: normal;
-}
-
-.two-columns__paragraph:last-of-type
-{
-    margin: 0;
-}
-
-.two-columns__span-accent
-{
-    font-weight: bold;
-}
-
-.digits
-{
-    margin-top: 100px;
-}
-
-.section-title
-{
-    width: 60%;
-    margin: 0 auto 20px;
-
-    text-align: center;
-
-    font-size: 60px;
-    font-weight: bold;
-    line-height: 69px;
-}
-
-.section-subtitle
-{
-    width: 60%;
-    margin: 0 auto 0;
-    padding: 0;
-
-    text-align: center;
-
-    font-size: 24px;
-    font-weight: normal;
-    line-height: 34px;
-}
-
-.table
-{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-
-    width: 1100px;
-    margin: 0 auto 100px;
-    padding: 0;
-}
-
-.table__cell
-{
-    width: 250px;
-    margin: 60px 0 0 0;
-
-    list-style-type: none;
-}
-
-.table__heading
-{
-    margin: 0;
-    padding: 0;
-
-    font-size: 24px;
-    font-weight: bold;
-    line-height: 1.15;
-}
-
-.table__text
-{
-    margin: 20px 0 0 0;
-    padding: 0;
-
-    font-size: 18px;
-    font-weight: normal;
-    line-height: 1.2;
-}
-
-.feynman
-{
-    position: relative;
-
-    height: 790px;
-
-    text-align: center;
-
-    background-color: #f2f2f2;
-}
-
-.feynman__title
-{
-    position: relative;
-    z-index: 2;
-
-    width: 648px;
-    margin: 0 auto;
-
-    font-size: 120px;
-    font-weight: bold;
-    line-height: 1.15;
-}
-
-.feynman__subtitle
-{
-    position: relative;
-    z-index: 2;
-
-    margin: 70px 0 0 0;
-    padding: 0;
-
-    font-size: 36px;
-    font-weight: normal;
-    line-height: 51px;
-}
-
-.feynman__link
-{
-    position: absolute;
-    top: 50%;
-    right: 48px;
-
-    text-decoration: none;
-
-    color: black;
-
-    font-size: 36px;
-    font-weight: normal;
-    line-height: 51px;
-}
-
-.feynman__main-illustration
-{
-    position: absolute;
-    bottom: 0;
-    left: 0;
-
-    width: 867px;
-    height: 637px;
-
-    background-image: url(../images/feynman.png);
-    background-size: 867px 637px;
-}
-
-.kaufman
-{
-    position: relative;
-    z-index: -2;
-
-    overflow: hidden;
-
-    padding: 90px 0;
-
-    background-color: #1f1f1f;
-}
-
-.section-title_theme_dark
-{
-    color: white;
-}
-
-.section-subtitle_theme_dark
-{
-    color: white;
-}
-
-.table__cell_theme_dark
-{
-    width: 200px;
-    margin-top: 80px;
-    margin-right: 0;
-
-    color: white;
-}
-
-.kaufman__triangle
-{
-    position: absolute;
-    z-index: -1;
-    top: 0;
-    right: -210px;
-
-    width: 877px;
-    height: 877px;
-
-    background-image: url('../images/kaufman-triangle.svg');
-    background-size: 877px;
-}
-
-.footer
-{
-    display: flex;
-
-    min-height: 350px;
-
-    background-color: #1f1f1f;
-}
-
-.footer__columns
-{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-
-    width: 90%;
-    margin: 60px auto 40px;
-    padding: 0;
-
-    text-decoration: none;
-
-    color: white;
-}
-
-.footer__column {
+  width: 730px;
   margin: 0;
+  padding: 0;
+
+  font-size: 102px;
+  font-weight: bold;
+  line-height: 96px;
+}
+
+.header__subtitle {
+  position: absolute;
+  z-index: 3;
+  bottom: 30px;
+  left: 64px;
+
+  width: 388px;
+  margin: 0;
+  padding: 0;
+
+  font-size: 18px;
+  font-weight: normal;
+  line-height: 25px;
+}
+
+.header__link {
+  text-decoration: none;
+
+  color: #2f80ed;
+}
+
+.header__main-illustration {
+  position: absolute;
+  z-index: 1;
+  right: 0;
+  bottom: 0;
+
+  width: 765px;
+  height: 608px;
+}
+
+.header__square-pic {
+  position: absolute;
+  top: 64px;
+  right: 0;
+
+  width: 568px;
+  height: 568px;
+
+  background-color: #2f80ed;
+}
+
+
+.two-columns {
+  display: flex;
+  justify-content: space-between;
+
+  width: 80%;
+  margin: 100px auto 0;
+}
+
+.two-columns__brief {
+  width: 175px;
+  margin: 0;
+  padding: 0;
+
+  text-decoration: none;
+
+  color: #2f80ed;
+
+  font-size: 18px;
+  font-weight: normal;
+  line-height: 1.2;
+}
+
+.two-columns__main-text {
+  width: 80%;
+  min-width: 784px;
+}
+
+.two-columns__paragraph {
+  margin: 0 0 30px;
+  padding: 0;
+
+  font-size: 24px;
+  font-weight: normal;
+  line-height: 34px;
+}
+
+.two-columns__paragraph:last-of-type {
+  margin: 0;
+}
+
+.two-columns__span-accent {
+  font-weight: bold;
+}
+
+.digits {
+  margin-top: 100px;
+}
+
+.section-title {
+  width: 60%;
+  margin: 0 auto 20px;
+
+  text-align: center;
+
+  font-size: 60px;
+  font-weight: bold;
+  line-height: 69px;
+}
+
+.section-subtitle {
+  width: 60%;
+  margin: 0 auto 0;
+  padding: 0;
+
+  text-align: center;
+
+  font-size: 24px;
+  font-weight: normal;
+  line-height: 34px;
+}
+
+.table {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+
+  width: 1100px;
+  margin: 0 auto 100px;
   padding: 0;
 }
 
-.footer__column_content_copyright
-{
-    display: flex;
-    flex-basis: 711px;
-    flex-direction: column;
-    justify-content: space-between;
+.table__cell {
+  width: 250px;
+  margin: 60px 0 0 0;
+
+  list-style-type: none;
 }
 
-.logo_place_footer
-{
-    height: 35px;
+.table__heading {
+  margin: 0;
+  padding: 0;
 
-    background-image: url('../images/logo_place_footer.svg');
-    background-size: 183px 35px;
+  font-size: 24px;
+  font-weight: bold;
+  line-height: 1.15;
 }
 
-.footer__author
-{
-    margin: 18px 0 18px;
-    padding: 0;
+.table__text {
+  margin: 20px 0 0 0;
+  padding: 0;
 
-    font-size: 18px;
-    font-weight: normal;
-    line-height: 25px;
+  font-size: 18px;
+  font-weight: normal;
+  line-height: 1.2;
 }
 
-.footer__column_content_info
-{
-    display: flex;
-    flex-direction: column;
+.feynman {
+  position: relative;
+
+  height: 790px;
+
+  text-align: center;
+
+  background-color: #f2f2f2;
 }
 
-.footer__column_content_social
-{
-    display: flex;
-    flex-direction: column;
+.feynman__title {
+  position: relative;
+  z-index: 2;
+
+  width: 648px;
+  margin: 0 auto;
+
+  font-size: 120px;
+  font-weight: bold;
+  line-height: 1.15;
 }
 
-.footer__column-heading
-{
-    margin: 0;
-    padding: 0;
+.feynman__subtitle {
+  position: relative;
+  z-index: 2;
 
-    font-size: 18px;
-    font-weight: bold;
-    line-height: 30px;
+  margin: 70px 0 0 0;
+  padding: 0;
+
+  font-size: 36px;
+  font-weight: normal;
+  line-height: 51px;
 }
 
-.footer__column-links
-{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+.feynman__link {
+  position: absolute;
+  top: 50%;
+  right: 48px;
 
-    margin: 20px 0 16px;
-    padding: 0;
+  text-decoration: none;
 
-    list-style-type: none;
+  color: black;
 
-    font-size: 18px;
-    font-weight: normal;
-    line-height: 30px;
+  font-size: 36px;
+  font-weight: normal;
+  line-height: 51px;
 }
 
-.footer__link
-{
-    text-decoration: none;
+.feynman__main-illustration {
+  position: absolute;
+  bottom: 0;
+  left: 0;
 
-    color: white;
+  width: 867px;
+  height: 637px;
+
+  background-image: url(../images/feynman.png);
+  background-size: 867px 637px;
 }
 
-.footer__social-icon
-{
-    width: 16px;
-    height: 16px;
-    margin-left: 10px;
+.kaufman {
+  position: relative;
+  z-index: -2;
+
+  overflow: hidden;
+
+  padding: 90px 0;
+
+  background-color: #1f1f1f;
+}
+
+.section-title_theme_dark {
+  color: white;
+}
+
+.section-subtitle_theme_dark {
+color: white;
+}
+
+.table__cell_theme_dark {
+width: 200px;
+margin-top: 80px;
+margin-right: 0;
+
+color: white;
+}
+
+.kaufman__triangle {
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  right: -210px;
+
+  width: 877px;
+  height: 877px;
+
+  background-image: url('../images/kaufman-triangle.svg');
+  background-size: 877px;
+}
+
+.footer {
+  display: flex;
+
+  min-height: 350px;
+
+  background-color: #1f1f1f;
+}
+
+.footer__columns {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+
+  width: 90%;
+  margin: 60px auto 40px;
+  padding: 0;
+
+  text-decoration: none;
+
+  color: white;
+}
+
+.footer__column {
+margin: 0;
+padding: 0;
+}
+
+.footer__column_content_copyright {
+  display: flex;
+  flex-basis: 711px;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.logo_place_footer {
+  height: 35px;
+
+  background-image: url('../images/logo_place_footer.svg');
+  background-size: 183px 35px;
+}
+
+.footer__author {
+  margin: 18px 0 18px;
+  padding: 0;
+
+  font-size: 18px;
+  font-weight: normal;
+  line-height: 25px;
+}
+
+.footer__column_content_info {
+  display: flex;
+  flex-direction: column;
+}
+
+.footer__column_content_social {
+  display: flex;
+  flex-direction: column;
+}
+
+.footer__column-heading {
+  margin: 0;
+  padding: 0;
+
+  font-size: 18px;
+  font-weight: bold;
+  line-height: 30px;
+}
+
+.footer__column-links {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+
+  margin: 20px 0 16px;
+  padding: 0;
+
+  list-style-type: none;
+
+  font-size: 18px;
+  font-weight: normal;
+  line-height: 30px;
+}
+
+.footer__link {
+  text-decoration: none;
+
+  color: white;
+}
+
+.footer__social-icon {
+  width: 16px;
+  height: 16px;
+  margin-left: 10px;
 }
