--- a/blocks/header/__title/header__title.css
+++ b/blocks/header/__title/header__title.css
@@ -1,12 +1,10 @@
 .header__title {
-  position: relative;
   z-index: 2;
-  left: 64px;
 
   align-self: center;
 
   width: 730px;
-  margin: 0;
+  margin: 0 0 0 64px;
   padding: 0;
 
   font-size: 102px;
