--- a/blocks/khan/__book-pic/khan__book-pic.css
+++ b/blocks/khan/__book-pic/khan__book-pic.css
@@ -1,14 +1,8 @@
 .khan__book-pic {
-  position: relative;
-  bottom: 0;
-  left: 0;
-
-  overflow: hidden;
-
   width: 620px;
-  max-width: 0 48px 0 0;
   height: 608px;
   margin: 0 48px 0 0;
 
   object-fit: cover;
+  object-position: left top;
 }
