--- a/blocks/khan/__buy-link/khan__buy-link.css
+++ b/blocks/khan/__buy-link/khan__buy-link.css
@@ -1,8 +1,6 @@
 .khan__buy-link {
-  position: absolute;
-  top: 0;
-
   transition: opacity .7s ease;
+  vertical-align: top;
   text-decoration: none;
 
   color: #2f80ed;
