--- a/blocks/table/table.css
+++ b/blocks/table/table.css
@@ -7,6 +7,8 @@
 @import url(_theme/table_theme_dark.css);
 
 .table {
+  z-index: 1;
+
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
