feat: add fonts

--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -3,5 +3,8 @@
   max-width: 1600px;
   margin: 0 auto;
 
-  font-family: 'Helvetica Neue', Arial, sans-serif;
+  font-family: Inter, 'Helvetica Neue', Arial, sans-serif;
+
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
 }
